fix tabs z-index
- [CORE-206]

--- a/dapps/ui.libs/src/style/tabs.scss
+++ b/dapps/ui.libs/src/style/tabs.scss
@@ -88,6 +88,8 @@
     height: 70px;
 
     .evan-tab {
+      z-index: 9;
+
       width: 100%;
 
       &.active {
